force-app/main/default/objects/GiftCommitment/fields/Acknowledgement_Status__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Status__c</fullName>
    <inlineHelpText>Tracks the status of thank-you communications sent to donors for their contributions.

To be sent: Acknowledgement has not yet been sent to the donor.
Sent: A thank-you message or formal acknowledgement has been sent to the donor.
Don&apos;t Send: Acknowledgement will not be sent</inlineHelpText>
    <label>Acknowledgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Sent</fullName>
                <default>true</default>
                <label>To be Sent</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>