force-app/main/default/objects/GiftCommitment/fields/Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To capture if the donor wants this gift commitment to remain anonymous.</description>
    <inlineHelpText>Checking this checkbox will make this Gift Commitment visible only to the owner or users with Salesforce administration rights.</inlineHelpText>
    <label>Anonymous</label>
    <type>Checkbox</type>
</CustomField>