force-app/main/default/objects/GiftCommitment/fields/Commitment_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Closed_Date__c</fullName>
    <label>Commitment Closed Date</label>
    <type>DateTime</type>
</CustomField>