force-app/main/default/objects/GiftCommitment/fields/fdff__GUID__c.field-meta.xml
<CustomField>
    <fullName>fdff__GUID__c</fullName>
    <label>GUID</label>
    <length>38</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>