force-app/main/default/objects/GiftCommitment/fields/fdff__PayLinks_Page__c.field-meta.xml
<CustomField>
    <fullName>fdff__PayLinks_Page__c</fullName>
    <label>PayLinks Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>