force-app/main/default/objects/GiftCommitment/fields/fdff__Setup_URL__c.field-meta.xml
<CustomField>
    <fullName>fdff__Setup_URL__c</fullName>
    <description>A URL to a payment page where the payer can update how the gift commitment will be paid. The update can change, for example, payment method and processor, mandate, payment profile and payment reference.</description>
    <inlineHelpText>A URL to a payment page where the payer can update how the gift commitment will be paid.</inlineHelpText>
    <label>Setup URL</label>
    <type>Url</type>
</CustomField>