force-app/main/default/objects/GiftCommitment/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <description>This is the first transaction date after set up accounting for 5 days of mandate set up</description>
    <inlineHelpText>This is the first transaction date after set up accounting for 5 days of mandate set up</inlineHelpText>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>