force-app/main/default/objects/GiftCommitment/fields/Normalized_Date__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Date__c</fullName>
    <formula>IF(
    OR(TEXT(Status) = &apos;Active&apos;, TEXT(Status) = &apos;Paused&apos;),
     EffectiveStartDate ,
    IF(
        OR(TEXT(Status) = &apos;Closed&apos;, TEXT(Status) = &apos;Failing&apos;),
         LastPaidTransactionDate ,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized Date</label>
    <type>Date</type>
</CustomField>