force-app/main/default/objects/GiftCommitment/fields/sj_UI_DataCloud_GiftCommitment__c.field-meta.xml
<CustomField>
    <fullName>sj_UI_DataCloud_GiftCommitment__c</fullName>
    <label>sj_UI_DataCloud_GiftCommitment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>