force-app/main/default/objects/GiftCommitment/listViews/All_GiftCommitments.listView-meta.xml
<ListView>
    <fullName>All_GiftCommitments</fullName>
    <filterScope>Everything</filterScope>
    <label>All Gift Commitments</label>
</ListView>